Working on creating embeddings for skipgram

--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -112,11 +112,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "vCnATRPgBZEd",
+        "outputId": "0d405210-fcf9-44f2-a6c7-de8d1ccbe6ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "fc33930a-6042-478c-dc34-89efd59a9b3b"
+        }
       },
       "source": [
         "import numpy as np\n",
@@ -138,7 +138,7 @@
         "from matplotlib import pylab\n",
         "import pandas as pd"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,16 +154,16 @@
       "metadata": {
         "colab_type": "code",
         "id": "qBNCPtOoBbB1",
+        "outputId": "e610c301-5be4-44ca-ec66-cbec98d64322",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "21a9d00d-0817-42c8-d4b6-b3f81a5acbf9"
+        }
       },
       "source": [
         "print(tf.__version__) #  check what version of TF is imported"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,22 +191,26 @@
       "metadata": {
         "colab_type": "code",
         "id": "DdjNeehKBd-a",
+        "outputId": "bfeef0be-c679-4538-8af8-480f299a13f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "e528cf76-5836-462c-ace1-fe264c729c6f"
+          "height": 122
+        }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -227,16 +231,16 @@
       "metadata": {
         "colab_type": "code",
         "id": "iS0-uINUBfic",
+        "outputId": "b30efd2c-f8c3-465e-a42c-084da425d700",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "18a9b67f-404f-48d2-ff04-4e0714004dd3"
+        }
       },
       "source": [
         "cd '/content/drive/My Drive/Colab Notebooks/'"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,16 +305,16 @@
       "metadata": {
         "colab_type": "code",
         "id": "ILdA_IimBlte",
+        "outputId": "db410f4c-9a07-405e-9866-6c7ff354d74e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e978f84b-b6c7-42e6-f3b6-4666bf0f7bf7"
+        }
       },
       "source": [
         "n_samples, V"
       ],
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -322,7 +326,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 8
         }
       ]
     },
@@ -331,17 +335,17 @@
       "metadata": {
         "colab_type": "code",
         "id": "fRbpue0WBms6",
+        "outputId": "4e83cde7-0afc-4306-ebc0-ceb82075f8e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "065537a8-2ff8-468b-94b9-75693a58c116"
+        }
       },
       "source": [
         "# example of how word to integer mapping looks like in the tokenizer\n",
         "print(list((tokenizer.word_index.items()))[:5])"
       ],
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,16 +474,16 @@
       "metadata": {
         "id": "VhOEHUygm7y3",
         "colab_type": "code",
+        "outputId": "890acff0-7c88-4915-8b0c-a9c40e5ebf9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "95192b62-721d-405f-c943-b375d713120d"
+        }
       },
       "source": [
         "x.shape, y.shape"
       ],
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,9 +495,22 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UieP5fGDVps5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "V = y.shape[1]"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -503,14 +520,14 @@
         "colab": {}
       },
       "source": [
-        "def skipgram_architechture():\n",
+        "def skipgram_architechture(dim):\n",
         "  model = Sequential()\n",
-        "  model.add(Embedding(input_dim=y.shape[1], output_dim=50, input_length=y.shape[0], embeddings_initializer='glorot_uniform'))\n",
+        "  model.add(Embedding(input_dim=V, output_dim=dim, input_length=1, embeddings_initializer='glorot_uniform'))\n",
         "  # not sure about the input length\n",
         "  #model.add(Reshape((94556,), input_shape=(1,94556)))\n",
         "  # above line or below line\n",
-        "  model.add(Reshape((50,), input_shape=(1, 50)))\n",
-        "  model.add(Dense(2557, activation='softmax', kernel_initializer='glorot_uniform'))\n",
+        "  model.add(Reshape((dim,)))\n",
+        "  model.add(Dense(V, activation='softmax', kernel_initializer='glorot_uniform'))\n",
         "  model.compile(optimizer='SGD',\n",
         "                  loss='categorical_crossentropy',\n",
         "                  metrics=['accuracy'])\n",
@@ -522,47 +539,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KV9voh0c3pmV",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#plot_model(skipgram_architechture, show_shapes = True, show_layer_names=False)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "BJX9ht7X3se7",
         "colab_type": "code",
+        "outputId": "2fa261e6-bb06-469c-bc07-61eb69a508ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        },
-        "outputId": "cbf23b46-f151-4cef-a0a1-ac3af4eb7716"
+        }
       },
       "source": [
-        "skipgram_architechture().summary()"
+        "dim = 50\n",
+        "skipgram_architechture(dim).summary()"
       ],
-      "execution_count": 18,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential\"\n",
+            "Model: \"sequential_1\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "embedding (Embedding)        (None, 94556, 50)         127850    \n",
+            "embedding_1 (Embedding)      (None, 1, 50)             127850    \n",
             "_________________________________________________________________\n",
-            "reshape (Reshape)            (None, 94556)             0         \n",
+            "reshape_1 (Reshape)          (None, 50)                0         \n",
             "_________________________________________________________________\n",
-            "dense (Dense)                (None, 2557)              241782249 \n",
+            "dense_1 (Dense)              (None, 2557)              130407    \n",
             "=================================================================\n",
-            "Total params: 241,910,099\n",
-            "Trainable params: 241,910,099\n",
+            "Total params: 258,257\n",
+            "Trainable params: 258,257\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ],
@@ -585,15 +590,15 @@
       "metadata": {
         "colab_type": "code",
         "id": "a9eg0xPoDP9B",
+        "outputId": "e48782fc-c7d2-4fb7-83df-d8790165704a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
-        },
-        "outputId": "638e0b1f-5ae1-48e5-b2b1-4c153426ced9"
+          "height": 51
+        }
       },
       "source": [
         "# train skipgram model\n",
-        "skipgram = skipgram_architechture()\n",
+        "skipgram = skipgram_architechture(dim)\n",
         "skipgram.fit(x, y)"
       ],
       "execution_count": 24,
@@ -601,9 +606,7 @@
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:Model was constructed with shape (None, 94556) for input Tensor(\"embedding_4_input:0\", shape=(None, 94556), dtype=float32), but it was called on an input with incompatible shape (None, 1).\n",
-            "WARNING:tensorflow:Model was constructed with shape (None, 94556) for input Tensor(\"embedding_4_input:0\", shape=(None, 94556), dtype=float32), but it was called on an input with incompatible shape (None, 1).\n",
-            "2955/2955 [==============================] - 7s 3ms/step - loss: 7.6985 - accuracy: 0.0602\n"
+            "2955/2955 [==============================] - 8s 3ms/step - loss: 7.6983 - accuracy: 0.0602\n"
           ],
           "name": "stdout"
         },
@@ -611,7 +614,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f5426f7bf60>"
+              "<tensorflow.python.keras.callbacks.History at 0x7ff52e81a0b8>"
             ]
           },
           "metadata": {
@@ -624,6 +627,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "-NvnAFp8WrpU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "weights = skipgram.get_weights()\n",
+        "embedding = weights[0]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab_type": "code",
         "id": "eGEHlkQ4DShO",
         "colab": {}
@@ -631,7 +648,16 @@
       "source": [
         "# save embeddings for vectors of length 50, 150 and 300 using skipgram model\n",
         "\n",
-        "## How to save the model"
+        "f = open('vectors_skipgram.txt', 'w')\n",
+        "f.write(\" \".join([str(V-1), str(dim)]))\n",
+        "f.write(\"\\n\")\n",
+        "\n",
+        "for word,i in tokenizer.word_index.items():\n",
+        "  f.write(word)\n",
+        "  f.write(\" \")\n",
+        "  f.write(\" \".join(map(str, list(embedding[i,:]))))\n",
+        "  f.write(\"\\n\")\n",
+        "f.close()"
       ],
       "execution_count": 0,
       "outputs": []
