--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -657,7 +657,9 @@
         "  f.write(\" \")\n",
         "  f.write(\" \".join(map(str, list(embedding[i,:]))))\n",
         "  f.write(\"\\n\")\n",
-        "f.close()"
+        "f.close()\n",
+        "\n",
+        "## cannot save the file. Store a copy in drive, run from there, and then save the created file, probably push to github"
       ],
       "execution_count": 0,
       "outputs": []
