Finished Task 1.2 CBOW

--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -700,6 +700,434 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "GZMJwlS7dETh",
+        "colab_type": "text"
+      },
+      "source": [
+        "Prepare data for CBOW\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DZmhahwTdR_d",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def generate_data_CBOW(corpus, window_size, V):\n",
+        "    maxlen = window_size*2\n",
+        "    all_in = []\n",
+        "    all_out = [] #one real label wt\n",
+        "    for line in corpus:\n",
+        "        sentence_length = len(line)\n",
+        "      \n",
+        "        for index, word in enumerate(line):  #for each word in the line, we create a little neighborhood [left,right]\n",
+        "            left = index - window_size\n",
+        "            right = index + window_size + 1\n",
+        "      \n",
+        "            in_words = []   #neighbor words of wt, used as input to predict wt       \n",
+        "      \n",
+        "            for i in range(left, right):\n",
+        "                if 0 <= i < sentence_length and i != index:\n",
+        "                    # Add the input word\n",
+        "                    in_words.append(line[i])\n",
+        "\n",
+        "            \n",
+        "            all_in.append(in_words)\n",
+        "            all_out.append(to_categorical(word,V))\n",
+        "      \n",
+        "    all_in = sequence.pad_sequences(all_in, maxlen=maxlen)\n",
+        "                                      \n",
+        "    return (np.array(all_in),np.array(all_out))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fQqNXVdPddWg",
+        "colab_type": "text"
+      },
+      "source": [
+        "Create training data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "28BDAMUxdh_G",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x , y = generate_data_CBOW(corpus,window_size,V)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Iswy4EU3gr12",
+        "colab_type": "text"
+      },
+      "source": [
+        "Create CBOW architecture"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "du7xuYdIgw6P",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def cbow_architechture(dim):\n",
+        "    cbow = Sequential()\n",
+        "    cbow.add(Embedding(input_dim=V, output_dim=dim, embeddings_initializer='glorot_uniform', input_length=window_size*2))\n",
+        "    cbow.add(Lambda(lambda x: K.mean(x, axis=1), output_shape=(dim,)))\n",
+        "    cbow.add(Dense(V, kernel_initializer='glorot_uniform', activation='softmax'))\n",
+        "    #multiclass classification->categorical_crossentropy loss, optimizer->PPT02 p24\n",
+        "    cbow.compile(loss='categorical_crossentropy', optimizer='adadelta', metrics=['accuracy'])\n",
+        "    return model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DNfaATp3g1Y0",
+        "colab_type": "text"
+      },
+      "source": [
+        "Train CBOW model - embedding vector length 50"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JqGNiCVyhy65",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# dimension of word embedding\n",
+        "dim = 50\n",
+        "\n",
+        "cbow = cbow_architechture(dim)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IyZhcahTiKV2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plot_model(cbow, show_shapes = True, show_layer_names=False)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GFiw8wiAiUo8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cbow.summary()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9qoQ_z3XiW2G",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# train skipgram model\n",
+        "cbow.fit(x, y, batch_size=64, epochs=10, verbose=1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1n_XLpoSizLy",
+        "colab_type": "text"
+      },
+      "source": [
+        "Save embedding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4xEoVTiBi72Q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# The embedding matrix is saved in the weights of the model\n",
+        "weights = cbow.get_weights()\n",
+        "\n",
+        "# Get the embedding matrix\n",
+        "embedding = weights[0]\n",
+        "\n",
+        "# get word embeddings for each word in the vocabulary, write to a new file called 'vectors_cbow{dim}.txt'\n",
+        "\n",
+        "# 'w' - will create a file if the specified file does not exist\n",
+        "f = open('vectors_cbow{dim}.txt'.format(dim=dim) ,'w')\n",
+        "# str(V-1) and str(dim) are joined with a space in between them. This is the size of the embedding\n",
+        "f.write(\" \".join([str(V-1),str(dim)]))\n",
+        "f.write(\"\\n\")\n",
+        "\n",
+        "for word, i in tokenizer.word_index.items(): #tokenizer.word_index.items() is a dictionary with {unique word, unique index}\n",
+        "    f.write(word)\n",
+        "    f.write(\" \")\n",
+        "    # map(function, iterables) executes a specified function for each item in a iterable. Here it just turns every line of the embedding to string.\n",
+        "    f.write(\" \".join(map(str, list(embedding[i,:]))))\n",
+        "    f.write(\"\\n\")\n",
+        "f.close()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "xhQJ-pOgjrp4"
+      },
+      "source": [
+        "Train CBOW model - embedding vector length 150"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BVb7BxTdjoyp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# dimension of word embedding\n",
+        "dim = 150\n",
+        "\n",
+        "cbow = cbow_architechture(dim)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FginlQRMj4aQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plot_model(cbow, show_shapes = True, show_layer_names=False)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bi7D2JxNj7qX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cbow.summary()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "19djsLqij_dq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# train skipgram model\n",
+        "cbow.fit(x, y, batch_size=64, epochs=10, verbose=1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "snC7VXXHj2nO",
+        "colab_type": "text"
+      },
+      "source": [
+        "Save embedding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xGpTElB1kHh7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# The embedding matrix is saved in the weights of the model\n",
+        "weights = cbow.get_weights()\n",
+        "\n",
+        "# Get the embedding matrix\n",
+        "embedding = weights[0]\n",
+        "\n",
+        "# get word embeddings for each word in the vocabulary, write to a new file called 'vectors_cbow{dim}.txt'\n",
+        "\n",
+        "# 'w' - will create a file if the specified file does not exist\n",
+        "f = open('vectors_cbow{dim}.txt'.format(dim=dim) ,'w')\n",
+        "# str(V-1) and str(dim) are joined with a space in between them. This is the size of the embedding\n",
+        "f.write(\" \".join([str(V-1),str(dim)]))\n",
+        "f.write(\"\\n\")\n",
+        "\n",
+        "for word, i in tokenizer.word_index.items(): #tokenizer.word_index.items() is a dictionary with {unique word, unique index}\n",
+        "    f.write(word)\n",
+        "    f.write(\" \")\n",
+        "    # map(function, iterables) executes a specified function for each item in a iterable. Here it just turns every line of the embedding to string.\n",
+        "    f.write(\" \".join(map(str, list(embedding[i,:]))))\n",
+        "    f.write(\"\\n\")\n",
+        "f.close()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "vVnwNWvpkPNd"
+      },
+      "source": [
+        "Train CBOW model - embedding vector length 300"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tqJZJ7oGkRNN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# dimension of word embedding\n",
+        "dim = 300\n",
+        "\n",
+        "cbow = cbow_architechture(dim)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-UXwCXe9oM1A",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plot_model(cbow, show_shapes = True, show_layer_names=False)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D5uo15a5oR9N",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cbow.summary()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JVRh42vmoUmP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# train skipgram model\n",
+        "cbow.fit(x, y, batch_size=64, epochs=10, verbose=1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EuCa4_ILoX1K",
+        "colab_type": "text"
+      },
+      "source": [
+        "Save embedding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nRgjA1hYodLO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# The embedding matrix is saved in the weights of the model\n",
+        "weights = cbow.get_weights()\n",
+        "\n",
+        "# Get the embedding matrix\n",
+        "embedding = weights[0]\n",
+        "\n",
+        "# get word embeddings for each word in the vocabulary, write to a new file called 'vectors_cbow{dim}.txt'\n",
+        "\n",
+        "# 'w' - will create a file if the specified file does not exist\n",
+        "f = open('vectors_cbow{dim}.txt'.format(dim=dim) ,'w')\n",
+        "# str(V-1) and str(dim) are joined with a space in between them. This is the size of the embedding\n",
+        "f.write(\" \".join([str(V-1),str(dim)]))\n",
+        "f.write(\"\\n\")\n",
+        "\n",
+        "for word, i in tokenizer.word_index.items(): #tokenizer.word_index.items() is a dictionary with {unique word, unique index}\n",
+        "    f.write(word)\n",
+        "    f.write(\" \")\n",
+        "    # map(function, iterables) executes a specified function for each item in a iterable. Here it just turns every line of the embedding to string.\n",
+        "    f.write(\" \".join(map(str, list(embedding[i,:]))))\n",
+        "    f.write(\"\\n\")\n",
+        "f.close()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "colab_type": "text",
         "id": "rr2BAI4nAfnG"
       },
