Code cleanup. Add skipgram for 150 and 300 vectors

--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -372,6 +372,31 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qc_S3hY2EamG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def save_embeddings(model, model_name):\n",
+        "  weights = model.get_weights()\n",
+        "  embedding = weights[0]\n",
+        "  f = open(model_name, 'w')\n",
+        "  f.write(\" \".join([str(V-1), str(dim)]))\n",
+        "  f.write(\"\\n\")\n",
+        "\n",
+        "  for word,i in tokenizer.word_index.items():\n",
+        "    f.write(word)\n",
+        "    f.write(\" \")\n",
+        "    f.write(\" \".join(map(str, list(embedding[i,:]))))\n",
+        "    f.write(\"\\n\")\n",
+        "  f.close()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -528,13 +553,23 @@
         "  # above line or below line\n",
         "  model.add(Reshape((dim,)))\n",
         "  model.add(Dense(V, activation='softmax', kernel_initializer='glorot_uniform'))\n",
-        "  model.compile(optimizer='SGD',\n",
+        "  model.compile(optimizer='adadelta',\n",
         "                  loss='categorical_crossentropy',\n",
         "                  metrics=['accuracy'])\n",
         "  return model"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gHcXjkGZFkm9",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Skipgram for Embedding Vector Length 50"
+      ]
     },
     {
       "cell_type": "code",
@@ -549,7 +584,8 @@
       },
       "source": [
         "dim = 50\n",
-        "skipgram_architechture(dim).summary()"
+        "skipgram50 = skipgram_architechture(dim)\n",
+        "skipgram50.summary()"
       ],
       "execution_count": 0,
       "outputs": [
@@ -598,8 +634,8 @@
       },
       "source": [
         "# train skipgram model\n",
-        "skipgram = skipgram_architechture(dim)\n",
-        "skipgram.fit(x, y)"
+        "skipgram50.fit(x, y)\n",
+        "save_embeddings(skipgram50, 'skipgram_50')"
       ],
       "execution_count": 0,
       "outputs": [
@@ -625,18 +661,14 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "-NvnAFp8WrpU",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Yip30sMdF89H",
+        "colab_type": "text"
       },
       "source": [
-        "weights = skipgram.get_weights()\n",
-        "embedding = weights[0]"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "### Skipgram for embedding vector length 150"
+      ]
     },
     {
       "cell_type": "code",
@@ -647,19 +679,36 @@
       },
       "source": [
         "# save embeddings for vectors of length 50, 150 and 300 using skipgram model\n",
-        "\n",
-        "f = open('vectors_skipgram.txt', 'w')\n",
-        "f.write(\" \".join([str(V-1), str(dim)]))\n",
-        "f.write(\"\\n\")\n",
-        "\n",
-        "for word,i in tokenizer.word_index.items():\n",
-        "  f.write(word)\n",
-        "  f.write(\" \")\n",
-        "  f.write(\" \".join(map(str, list(embedding[i,:]))))\n",
-        "  f.write(\"\\n\")\n",
-        "f.close()\n",
-        "\n",
-        "## cannot save the file. Store a copy in drive, run from there, and then save the created file, probably push to github"
+        "dim = 150\n",
+        "skipgram150 = skipgram_architechture(dim)\n",
+        "skipgram150.fit(x, y)\n",
+        "save_embeddings(skipgram150, 'skipgram_150')\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9zxqAAvIFzNI",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Skipgram for embedding vector length 300"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U0ahwbVAFOUU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dim = 300\n",
+        "skipgram300 = skipgram_architechture(dim)\n",
+        "skipgram300.fit(x, y)\n",
+        "save_embeddings(skipgram300, 'skipgram_300')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -805,6 +854,16 @@
         "colab_type": "text"
       },
       "source": [
+        "###CBOW for Embedding Vector Length 50"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HqtHGSsTG45-",
+        "colab_type": "text"
+      },
+      "source": [
         "Train CBOW model - embedding vector length 50"
       ]
     },
@@ -877,35 +936,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4xEoVTiBi72Q",
+        "id": "KJwUgbFEGNJ2",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# The embedding matrix is saved in the weights of the model\n",
-        "weights = cbow.get_weights()\n",
-        "\n",
-        "# Get the embedding matrix\n",
-        "embedding = weights[0]\n",
-        "\n",
-        "# get word embeddings for each word in the vocabulary, write to a new file called 'vectors_cbow{dim}.txt'\n",
-        "\n",
-        "# 'w' - will create a file if the specified file does not exist\n",
-        "f = open('vectors_cbow{dim}.txt'.format(dim=dim) ,'w')\n",
-        "# str(V-1) and str(dim) are joined with a space in between them. This is the size of the embedding\n",
-        "f.write(\" \".join([str(V-1),str(dim)]))\n",
-        "f.write(\"\\n\")\n",
-        "\n",
-        "for word, i in tokenizer.word_index.items(): #tokenizer.word_index.items() is a dictionary with {unique word, unique index}\n",
-        "    f.write(word)\n",
-        "    f.write(\" \")\n",
-        "    # map(function, iterables) executes a specified function for each item in a iterable. Here it just turns every line of the embedding to string.\n",
-        "    f.write(\" \".join(map(str, list(embedding[i,:]))))\n",
-        "    f.write(\"\\n\")\n",
-        "f.close()"
+        "save_embeddings(cbow, 'vectors_cbow{dim}.txt'.format(dim=dim))"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6hIlAEr9G_sb",
+        "colab_type": "text"
+      },
+      "source": [
+        "###CBOW for Embedding Vector Length 150"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -991,30 +1040,20 @@
         "colab": {}
       },
       "source": [
-        "# The embedding matrix is saved in the weights of the model\n",
-        "weights = cbow.get_weights()\n",
-        "\n",
-        "# Get the embedding matrix\n",
-        "embedding = weights[0]\n",
-        "\n",
-        "# get word embeddings for each word in the vocabulary, write to a new file called 'vectors_cbow{dim}.txt'\n",
-        "\n",
-        "# 'w' - will create a file if the specified file does not exist\n",
-        "f = open('vectors_cbow{dim}.txt'.format(dim=dim) ,'w')\n",
-        "# str(V-1) and str(dim) are joined with a space in between them. This is the size of the embedding\n",
-        "f.write(\" \".join([str(V-1),str(dim)]))\n",
-        "f.write(\"\\n\")\n",
-        "\n",
-        "for word, i in tokenizer.word_index.items(): #tokenizer.word_index.items() is a dictionary with {unique word, unique index}\n",
-        "    f.write(word)\n",
-        "    f.write(\" \")\n",
-        "    # map(function, iterables) executes a specified function for each item in a iterable. Here it just turns every line of the embedding to string.\n",
-        "    f.write(\" \".join(map(str, list(embedding[i,:]))))\n",
-        "    f.write(\"\\n\")\n",
-        "f.close()"
+        "save_embeddings(cbow, 'vectors_cbow{dim}.txt'.format(dim=dim))"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PiVIWzmDHG9t",
+        "colab_type": "text"
+      },
+      "source": [
+        "###CBOW for Embedding Vector Length 300"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1095,32 +1134,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nRgjA1hYodLO",
+        "id": "hGM8z6adGoE5",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# The embedding matrix is saved in the weights of the model\n",
-        "weights = cbow.get_weights()\n",
-        "\n",
-        "# Get the embedding matrix\n",
-        "embedding = weights[0]\n",
-        "\n",
-        "# get word embeddings for each word in the vocabulary, write to a new file called 'vectors_cbow{dim}.txt'\n",
-        "\n",
-        "# 'w' - will create a file if the specified file does not exist\n",
-        "f = open('vectors_cbow{dim}.txt'.format(dim=dim) ,'w')\n",
-        "# str(V-1) and str(dim) are joined with a space in between them. This is the size of the embedding\n",
-        "f.write(\" \".join([str(V-1),str(dim)]))\n",
-        "f.write(\"\\n\")\n",
-        "\n",
-        "for word, i in tokenizer.word_index.items(): #tokenizer.word_index.items() is a dictionary with {unique word, unique index}\n",
-        "    f.write(word)\n",
-        "    f.write(\" \")\n",
-        "    # map(function, iterables) executes a specified function for each item in a iterable. Here it just turns every line of the embedding to string.\n",
-        "    f.write(\" \".join(map(str, list(embedding[i,:]))))\n",
-        "    f.write(\"\\n\")\n",
-        "f.close()"
+        "save_embeddings(cbow, 'vectors_cbow{dim}.txt'.format(dim=dim))"
       ],
       "execution_count": 0,
       "outputs": []
